# SPA

./: .clang-format  .gitignore  .prettierignore  date_time.hpp  main.cpp
DateTime/: date.cpp  time.cpp  time.hpp
Utils/: utils.cpp
Z1/: CMakeLists.txt  CMakePresets.json  dnevnik.txt  instrukcije.txt  log.txt  main.cpp  Извјештај.docx
Z1/DataStructures/: LinkedList.hpp  PriorityQueue.hpp  Stack.hpp
Z1/DateTime/: date.cpp  date.hpp  time.cpp  time.hpp
Z1/Diary/: Diary.cpp  Diary.hpp
Z1/Entry/: DiaryEntry.cpp  DiaryEntry.hpp
Z1/Utils/: utils.cpp  utils.hpp
Z1/unosi/: macgr.txt  unos1.txt  unos10.txt  unos11.txt  unos12.txt  unos13.txt  unos14.txt  unos15.txt  unos2.txt  unos3.txt  unos5.txt  unos6.txt  unos7.txt  unos8.txt  unos9.txt
Z2/: CMakeLists.txt  CMakePresets.json
Z2/data/test1/: graph.txt  izvjestaj.txt  izvjestaj_13_12_2025__19_30_12.txt  izvjestaj_13_12_2025__19_51_27.txt  sensors.csv
Z2/data/test2/: graph.txt  sensors.csv
Z2/data/test3/: graph.txt  sensors.csv
Z2/include/algorithms/: Dijkstra.hpp  KruskalMST.hpp  UnionFind.hpp
Z2/include/graph/: Graph.hpp
Z2/include/interfaces/: IFailureSimulator.hpp  IGraph.hpp  IGraphLoader.hpp  ILoadCalculator.hpp  IMSTBuilder.hpp  IReportGenerator.hpp  ISensorLoader.hpp  IShortestPathFinder.hpp  ITree.hpp  ITreeBuilder.hpp  IUnionFind.hpp
Z2/include/loaders/: GraphLoader.hpp  SensorLoader.hpp
Z2/include/models/: BackupRoute.hpp  Bottleneck.hpp  DijkstraResult.hpp  Edge.hpp  EdgeLoad.hpp  FailureSimulatorResults.hpp  Node.hpp  PathResult.hpp  Sensor.hpp
Z2/include/reports/: ReportGenerator.hpp
Z2/include/simulation/: FailureSimulator.hpp  LoadCalculator.hpp
Z2/include/tree/: Tree.hpp  TreeBuilder.hpp
Z2/src/: main.cpp  test.ext
Z2/src/algorithms/: Dijkstra.cpp  KruskalMST.cpp  MSTBuilder.cpp  UnionFind.cpp
Z2/src/graph/: graph.cpp
Z2/src/loaders/: GraphLoader.cpp  SensorLoader.cpp
Z2/src/reports/: ReportGenerator.cpp
Z2/src/simulation/: FailureSimulator.cpp  LoadCalculator.cpp
Z2/src/tree/: Tree.cpp  TreeBuilder.cpp
Z2/tests/: test_Dijkstra.cpp  test_KruskalMST.cpp  test_LoadCalculator.cpp  test_Tree.cpp  test_UnionFind.cpp
Z3/: log.txt
Z3/data/test1/: flights.csv
Z3/data/test2/: flights.csv
Z3/include/Managers/: AirportManager.hpp
Z3/include/interfaces/: IAirportManager.hpp  IFlightLoader.hpp
Z3/include/loaders/: FlightLoader.hpp
Z3/include/models/: AirportStats.hpp  Flight.hpp
Z3/include/structures/: BTree.hpp  BTreeNode.hpp  Vector.hpp
Z3/source/: main.cpp
Z3/source/Managers/: AirportManager.cpp
Z3/source/loaders/: FlightLoader.cpp
Z3/source/structures/: BTree.cpp
